--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,16 +15,13 @@ html, body {
 body{
     background: url('../imagens/fundo-rosa.avif') no-repeat top center;
     background-size: cover;
-    background-attachment: fixed;
-
-
+    background-attachment:fixed;
+    
 }
 
 main {
-    height: 100vh;
     position: relative;
-    
-
+    height: 100vh;
 }
 
 section#telefone{
@@ -35,5 +32,14 @@ section#telefone{
     height: 627px;
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat;
+
+}
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 
 }
